--- a/MyDiaryCalendar/Supporting Files/Info.plist
+++ b/MyDiaryCalendar/Supporting Files/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사진첩 접근 권한을 허용하시겠습니까?</string>
+	<key>NSCameraUsageDescription</key>
+	<string>카메라 접근 권한을 허용하시겠습니까?</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SCDream1.otf</string>
